syntax = "proto3";

package sreportal.v1;

// PortalService provides portal management
service PortalService {
  // ListPortals returns all available portals
  rpc ListPortals(ListPortalsRequest) returns (ListPortalsResponse);
}

// ListPortalsRequest is the request for listing portals
message ListPortalsRequest {
  // namespace filters portals by namespace (empty for all namespaces)
  string namespace = 1;
}

// ListPortalsResponse contains the list of portals
message ListPortalsResponse {
  // portals is the list of available portals
  repeated Portal portals = 1;
}

// Portal represents a portal with its metadata
message Portal {
  // name is the portal resource name
  string name = 1;

  // title is the display title
  string title = 2;

  // main indicates if this is the default portal
  bool main = 3;

  // sub_path is the URL subpath for this portal
  string sub_path = 4;

  // namespace is the portal resource namespace
  string namespace = 5;

  // ready indicates if the portal is fully configured
  bool ready = 6;

  // url is the URL of a remote portal (empty for local portals)
  string url = 7;

  // is_remote indicates if this portal fetches data from a remote source
  bool is_remote = 8;

  // remote_sync contains status information for remote portals
  RemoteSyncStatus remote_sync = 9;
}

// RemoteSyncStatus contains status information about remote portal synchronization
message RemoteSyncStatus {
  // last_sync_time is the timestamp of the last successful sync (RFC3339 format)
  string last_sync_time = 1;

  // last_sync_error contains the error from the last failed sync attempt
  string last_sync_error = 2;

  // remote_title is the title of the remote portal
  string remote_title = 3;

  // fqdn_count is the number of FQDNs fetched from the remote portal
  int32 fqdn_count = 4;
}
